--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "chalk": "^0.4.0",
     "protractor": "^1.1.1",
     "uglify-save-license": "^0.4.1",
-    "gulp-less": "^1.3.3"
+    "gulp-less": "^1.3.3",
+    "gulp-gh-pages": "~0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
