--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-sanitize": "1.3.x",
     "angular-ui-router": "0.2.11",
     "bootstrap": "3.3.x",
-    "angular-zeroclipboard": "~0.3.2"
+    "angular-zeroclipboard": "~0.3.2",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
