--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "bootstrap": "3.3.x",
     "angular-zeroclipboard": "~0.3.2",
     "angular-bootstrap": "~0.11.2",
-    "angular-ui-utils": "bower-validate"
+    "angular-ui-utils": "bower-validate",
+    "angular-ui-sortable": "~0.13.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
