--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-zeroclipboard": "~0.3.2",
     "angular-bootstrap": "~0.11.2",
     "angular-ui-utils": "bower-validate",
-    "angular-ui-sortable": "~0.13.0"
+    "angular-ui-sortable": "~0.13.0",
+    "angular-material": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
