--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "repository": "https://github.com/pirhoo/iframe-scaffolder/",
+  "staticRemote": "git@github.com:Pirhoo/iframe-scaffolder.git",
   "devDependencies": {
     "gulp": "^3.8.0",
     "gulp-autoprefixer": "^0.0.6",
