--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-bootstrap": "0.13.1",
     "angular-ui-utils": "bower-validate",
     "angular-ui-sortable": "~0.13.0",
-    "angular-material": "~0.10.0"
+    "angular-material": "~0.10.0",
+    "angularjs-socialshare": "~0.1.13"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
