--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "angular-animate": "1.3.x",
     "jquery": "2.x.x",
     "angular-sanitize": "1.3.x",
+    "angular-animate": "1.3.x",
     "angular-ui-router": "0.2.11",
     "bootstrap": "3.3.1",
     "angular-zeroclipboard": "~0.3.2",
@@ -14,7 +15,8 @@
     "angular-ui-utils": "bower-validate",
     "angular-ui-sortable": "~0.13.0",
     "angular-material": "~0.10.0",
-    "angularjs-socialshare": "~0.1.13"
+    "angularjs-socialshare": "~0.1.13",
+    "velocity": "~1.2.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.x"
