--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "iframe-scaffolder",
   "version": "1.0.0",
-  "dependencies": {},
-  "repository": "https://github.com/pirhoo/iframe-scaffolder/",
-  "staticRemote": "git@github.com:pirhoo/iframe-scaffolder.git",
-  "facebookAppId": "883059891808177",
+  "dependencies": {
+    "@bower_components/angular": "angular/bower-angular#1.3.20",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#1.3.x",
+    "@bower_components/angular-aria": "angular/bower-angular-aria#^1.3.15 || >1.4.0-beta.0",
+    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#0.13.1",
+    "@bower_components/angular-material": "angular/bower-material#~0.10.0",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#1.3.x",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#1.3.x",
+    "@bower_components/angular-ui-router": "angular-ui/angular-ui-router-bower#0.2.15",
+    "@bower_components/angular-ui-sortable": "angular-ui/ui-sortable#~0.13.0",
+    "@bower_components/angular-ui-utils": "angular-ui/ui-utils#bower-validate",
+    "@bower_components/angular-zeroclipboard": "lisposter/angular-zeroclipboard#~0.3.2",
+    "@bower_components/angularjs-socialshare": "720kb/angular-socialshare#~0.1.13",
+    "@bower_components/bootstrap": "twbs/bootstrap#3.3.1",
+    "@bower_components/jquery": "jquery/jquery-dist#2.x.x",
+    "@bower_components/jquery-ui": "components/jqueryui#>=1.9",
+    "@bower_components/modernizr": "Modernizr/Modernizr#2.8.x",
+    "@bower_components/velocity": "julianshapiro/velocity#~1.2.2",
+    "@bower_components/zeroclipboard": "zeroclipboard/zeroclipboard#>=2"
+  },
+  "repository": "https://github.com/googletrends/iframe-scaffolder/",
+  "staticRemote": "git@github.com:googletrends/iframe-scaffolder.git",
+  "facebookAppId": "1491916714459281",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^0.0.6",
@@ -44,9 +63,10 @@
     "gulp-gh-pages": "~0.4.0"
   },
   "engines": {
-    "node": ">=8.9.4"
+    "node": ">=8.9.4",
+    "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   }
 }
