--- a/package.json
+++ b/package.json
@@ -25,42 +25,41 @@
   "staticRemote": "git@github.com:pirhoo/iframe-scaffolder.git",
   "facebookAppId": "1491916714459281",
   "devDependencies": {
+    "browser-sync": "^1.3.6",
+    "chalk": "^0.4.0",
+    "del": "^0.1.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^0.0.6",
     "gulp-cache": "^0.2.0",
-    "del": "^0.1.3",
     "gulp-csso": "^0.2.6",
     "gulp-filter": "^1.0.0",
     "gulp-flatten": "^0.0.2",
+    "gulp-gh-pages": "~0.4.0",
     "gulp-imagemin": "^1.0.0",
+    "gulp-inject": "^1.0.0",
     "gulp-jshint": "^1.8.0",
+    "gulp-karma": "^0.0.5",
+    "gulp-less": "^1.3.3",
     "gulp-load-plugins": "^0.6.0",
-    "gulp-size": "^1.1.0",
-    "gulp-uglify": "^1.0.0",
-    "gulp-useref": "^1.0.0",
+    "gulp-minify-html": "^0.1.3",
     "gulp-ng-annotate": "^0.3.0",
+    "gulp-ng-html2js": "^0.1.6",
+    "gulp-protractor": "^0.0.11",
     "gulp-replace": "^0.4.0",
     "gulp-rev": "^1.1.0",
     "gulp-rev-replace": "^0.3.0",
-    "gulp-ng-html2js": "^0.1.6",
-    "gulp-minify-html": "^0.1.3",
-    "gulp-inject": "^1.0.0",
-    "gulp-protractor": "^0.0.11",
-    "gulp-karma": "^0.0.5",
-    "main-bower-files": "^2.0.0",
+    "gulp-size": "^1.1.0",
+    "gulp-uglify": "^1.0.0",
+    "gulp-useref": "^1.0.0",
+    "http-proxy": "^1.3.0",
     "jshint-stylish": "^0.4.0",
-    "wiredep": "^4.0.0",
     "karma": "^2.0.0",
     "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
-    "require-dir": "^0.3.2",
-    "browser-sync": "^1.3.6",
-    "http-proxy": "^1.3.0",
-    "chalk": "^0.4.0",
+    "main-bower-files": "^2.0.0",
     "protractor": "^1.1.1",
-    "uglify-save-license": "^0.4.1",
-    "gulp-less": "^1.3.3",
-    "gulp-gh-pages": "~0.4.0"
+    "require-dir": "^0.3.2",
+    "uglify-save-license": "^0.4.1"
   },
   "engines": {
     "node": ">=8.9.4",
