--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "iframe-scaffolder",
   "version": "1.0.0",
   "dependencies": {
-    "@bower_components/angular": "angular/bower-angular#1.3.20",
-    "@bower_components/angular-animate": "angular/bower-angular-animate#1.3.x",
-    "@bower_components/angular-aria": "angular/bower-angular-aria#^1.3.15 || >1.4.0-beta.0",
+    "@bower_components/angular": "angular/bower-angular#1.6.x",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#1.6.x",
+    "@bower_components/angular-aria": "angular/bower-angular-aria#^1.6.x",
     "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#0.13.1",
-    "@bower_components/angular-material": "angular/bower-material#~0.10.0",
-    "@bower_components/angular-mocks": "angular/bower-angular-mocks#1.3.x",
-    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#1.3.x",
-    "@bower_components/angular-ui-router": "angular-ui/angular-ui-router-bower#0.2.15",
+    "@bower_components/angular-material": "angular/bower-material#~1.1.4",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#1.6.x",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#1.6.x",
+    "@bower_components/angular-ui-router": "angular-ui/angular-ui-router-bower#0.3.2",
     "@bower_components/angular-ui-sortable": "angular-ui/ui-sortable#~0.13.0",
     "@bower_components/angular-ui-utils": "angular-ui/ui-utils#bower-validate",
     "@bower_components/angular-zeroclipboard": "lisposter/angular-zeroclipboard#~0.3.2",
@@ -42,7 +42,7 @@
     "gulp-less": "^1.3.3",
     "gulp-load-plugins": "^0.6.0",
     "gulp-minify-html": "^0.1.3",
-    "gulp-ng-annotate": "^0.3.0",
+    "gulp-ng-annotate": "^2.1.0",
     "gulp-ng-html2js": "^0.1.6",
     "gulp-protractor": "^0.0.11",
     "gulp-replace": "^0.4.0",
@@ -56,7 +56,6 @@
     "karma": "^2.0.0",
     "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
-    "main-bower-files": "^2.0.0",
     "protractor": "^1.1.1",
     "require-dir": "^0.3.2",
     "uglify-save-license": "^0.4.1"
