--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ coverage
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 bower_components
+.publish
